# drl_grasping

./: CMakeLists.txt  README.md  drl_grasping.repos
drl_grasping/: __init__.py
drl_grasping/control/: moveit2.py
drl_grasping/envs/models/: __init__.py  panda.py  random_object.py  random_plane_pbr.py  realsense_d435.py
drl_grasping/envs/randomizers/: grasping.py
drl_grasping/envs/tasks/: __init__.py  grasping.py
drl_grasping/envs/worlds/: training_grounds.sdf
drl_grasping/perception/: __init__.py  point_cloud_sub.py
drl_grasping/utils/: model_collection_randomizer.py  tf2_broadcaster.py
launch/: environment.launch.py  example.launch.py  rviz.rviz
scripts/: test_models.py  train_grasping.py
src/panda_push_her/: env.py  train_ddpg.py  train_sac.py
worlds/: pushing_task.sdf
